<resources>
    <string name="app_name">Ipsator Pizza app</string>
    <string name="title">Title</string>
    <string name="food_item">food item</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add Custom Pizza</string>
    <string name="select_a_crust">Select a crust*</string>
    <string name="imgisveg">imgIsVeg</string>
    <string name="crust_size">Crust Size</string>
    <string name="select_a_crust_size">Select a crust size</string>
</resources>