<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:elevation="8dp"
    android:outlineAmbientShadowColor="@color/cardview_dark_background"
    app:cardCornerRadius="8dp"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtCrustSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/crust_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCrustSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/remove"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtCount"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_0"
                app:layout_constraintEnd_toStartOf="@+id/btnAdd"
                app:layout_constraintStart_toEndOf="@+id/btnRemove" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/add"
                android:textColor="@color/black" />

        </LinearLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>